# TapTools-Max

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  REVIVAL.md  STYLE.md
.github/workflows/: build.yml  style.yml
benchmarks/baselines/: linux-x64-gcc-container.json
docs/: tap.303.seq~.maxref.xml  tap.303~.maxref.xml  tap.5comb~.maxref.xml  tap.808.clap~.maxref.xml  tap.808.cowbell~.maxref.xml  tap.808.cymbal~.maxref.xml  tap.808.hat~.maxref.xml  tap.808.kick~.maxref.xml  tap.808.rim~.maxref.xml  tap.808.seq~.maxref.xml  tap.808.snare~.maxref.xml  tap.808.tom~.maxref.xml  tap.autowah~.maxref.xml  tap.convolve~.maxref.xml  tap.diode~.maxref.xml  tap.fourpole~.maxref.xml  tap.ladder~.maxref.xml  tap.overdrive~.maxref.xml  tap.pitchaccum~.maxref.xml  tap.semitone2ratio.maxref.xml  tap.shift~.maxref.xml  tap.spektral~.maxref.xml  tap.svf~.maxref.xml  tap.tune~.maxref.xml  tap.vca~.maxref.xml  tap.vco~.maxref.xml
help/: tap.303.seq~.maxhelp  tap.303~-pattern.maxpat  tap.303~.maxhelp  tap.5comb~.maxhelp  tap.808.clap~.maxhelp  tap.808.cowbell~.maxhelp  tap.808.cymbal~.maxhelp  tap.808.hat~.maxhelp  tap.808.kick~.maxhelp  tap.808.maxhelp  tap.808.rim~.maxhelp  tap.808.seq~.maxhelp  tap.808.snare~.maxhelp  tap.808.tom~.maxhelp  tap.autowah~.maxhelp  tap.convolve~.maxhelp  tap.diode~.maxhelp  tap.ladder~.maxhelp  tap.overdrive~.maxhelp  tap.pitchaccum~.maxhelp  tap.spektral~.maxhelp  tap.svf~.maxhelp  tap.tune~.maxhelp  tap.vca~.maxhelp  tap.vco~.maxhelp
plans/: tap.303.md  tap.808.md  tap.autowah~.md  tap.seq.md
runtime-tests/: make_maxtest.py
runtime-tests/patchers/: tap.303.seq~.maxtest.maxpat  tap.303~.maxtest.maxpat  tap.5comb~-wet.maxtest.maxpat  tap.5comb~.maxtest.maxpat  tap.808.clap~.maxtest.maxpat  tap.808.cowbell~.maxtest.maxpat  tap.808.cymbal~.maxtest.maxpat  tap.808.hat~.maxtest.maxpat  tap.808.kick~.maxtest.maxpat  tap.808.rim~.maxtest.maxpat  tap.808.seq~.maxtest.maxpat  tap.808.snare~.maxtest.maxpat  tap.808.tom~.maxtest.maxpat  tap.autowah~.maxtest.maxpat  tap.diode~.maxtest.maxpat  tap.ladder~.maxtest.maxpat  tap.overdrive~.maxtest.maxpat  tap.pitchaccum~.maxtest.maxpat  tap.semitone2ratio.maxtest.maxpat  tap.shift~.maxtest.maxpat  tap.spektral~.maxtest.maxpat  tap.svf~.maxtest.maxpat  tap.tune~.maxtest.maxpat  tap.vco~.maxtest.maxpat
scripts/: extract-kernel-repo.sh
source/projects/tap.303.seq_tilde/: tap.303.seq_tilde.cpp  tap.303.seq_tilde_test.cpp
source/projects/tap.303_tilde/: CMakeLists.txt  tap.303_tilde.cpp  tap.303_tilde_test.cpp
source/projects/tap.5comb_tilde/: CMakeLists.txt  tap.5comb_tilde.cpp  tap.5comb_tilde_test.cpp
source/projects/tap.808.clap_tilde/: CMakeLists.txt  tap.808.clap_tilde.cpp  (+1 more)
source/projects/tap.delay_tilde/: CMakeLists.txt  tap.delay_tilde.cpp
source/projects/tap.ladder_tilde/: CMakeLists.txt  ladder.h  ladder_render.cpp  tap.ladder_tilde.cpp  tap.ladder_tilde_test.cpp
source/projects/tap.spectra_tilde/: CMakeLists.txt  tap.spectra_tilde.cpp  tap.spectra_tilde_test.cpp
tools/capi/: taptools_capi.cpp  taptools_capi.h
(+157 files in other folders)
